# Voice-to-text-app

./: .gitignore  CLAUDE.md  README.md  config.json.example  keywords.txt  kws_add_keyword.py  main.py  pyproject.toml  readme.md  requirements.txt  run_ui_preview.py  run_web.py  shokztype.bat  tmp_volcengine_api_analysis.md  vocotype.bat  web_main.py
.claude/: settings.local.json
app/: audio_capture.py  cloud_asr.py  command_dispatcher.py  config.py  enrollment_ui.py  esp32_receiver.py  kws.py  output.py  speaker_cluster.py  speaker_enroll.py  transcribe.py  udp_audio_source.py  vad.py  vad_worker.py
app/web/: __init__.py  state.py
app/web/components/: audio_controls.py  sidebar.py  transcript.py
app/web/pages/: esp32.py  settings.py  (+2 more)
docs/: 计划-声纹识别.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app.css  types.ts
packaging/: build.bat  build.sh  create_shortcut.bat  create_splash.py  hotkey_helper.swift  macos_build_guide.md  shokztype.iss  shokztype.spec  verify_build.py
shokztype/: __init__.py  __main__.py  cli.py
shokztype/assets/: shokztype.icns
shokztype/core/: __init__.py  audio_capture.py  audio_source.py  campplus.py  cloud_asr.py  cloud_asr_factory.py  command_dispatcher.py  config.py  download_models.py  feedback.py  funasr_config.py  funasr_server.py  hotkey_helper.py  hotkeys.py  kws.py  kws_add_keyword.py  logging_config.py  output.py  output_mac.py  output_win.py  platform.py  speaker.py  speaker_db.py  speaker_enroll.py  transcribe.py  vad_worker.py  volcengine_asr.py  wave_writer.py
shokztype/desktop/: __init__.py
shokztype/web/: models.py  server.py  web_config.py
static/: index.html
tests/: conftest.py  test_app_icon.py  test_audio_source.py  test_cloud_asr.py  test_command_dispatcher.py  test_e2e_udp_streaming.py  test_kws.py  test_speaker.py  test_speaker_cluster.py  test_speaker_db.py  test_udp_audio_source.py  test_vad_worker_diarize.py  test_vad_worker_enroll.py  test_volcengine_asr.py
web/: server.py  web_config.py
web/routers/: devices.py  health.py  modes.py  process.py  recording.py  settings.py  voiceprint.py  wakeup.py
web/services/: device_monitor.py  llm_client.py  overlay_process.py  recording_pipeline.py  text_pipeline.py  voiceprint_manager.py
(+51 files in other folders)
